# PhRAMPT

./: LICENSE  README.md  parallel_phrampt.py  phrampt.py  pyproject.toml
src/phrampt/: parallel_phrampt.py  phrampt.py  phrampt_tools.py
