[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PhRAMPT"
version = "0.9.4"
authors = [
  { name="Patrick Cross", email="pcross@wisc.edu" },
]
description = "The Phonon Replication And Modeling/Plotting Tool (PhRAMPT) is a tool used assess the accuracy of interatomic potentials by comparing phonon dispersions generated in LAMMPS to DFT generated data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pcross0405/PhRAMPT"
Issues = "https://github.com/pcross0405/PhRAMPT/issues"
